# simubridge-skills

./: .gitignore  LICENSE  README.md  README_CN.md  README_EN.md  claude_desktop_config.json  project.yaml  pyproject.toml
examples/: basic_usage.md
skill/simubridge/: README.md  SKILL.md
skill/simubridge/references/: tool-guide.md
skills/simubridge/: README.md
src/simubridge/: __init__.py  __main__.py  app.py
src/simubridge/tools/: connection.py  inspection.py  model_management.py  modification.py  simulation.py  subsystem.py
src/simubridge/tools/_ports_helper_/: mcp_audit_power.m  mcp_audit_signal.m  mcp_connect_ports.m  mcp_delete_block.m  mcp_delete_dangling_lines.m  mcp_delete_line.m  mcp_get_ports.m  mcp_trace_lines.m
src/simubridge/tools/_sf_helper_/: mcp_get_mf_code.m  mcp_set_mf_code.m
