[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simubridge"
version = "0.1.0"
description = "SimuBridge MCP — AI-driven Simulink model creation, inspection, modification, and simulation via Model Context Protocol"
license = {text = "MIT"}
requires-python = ">=3.9"
readme = "README.md"
authors = [
    {name = "SimuBridge Contributors"},
]
keywords = ["mcp", "simulink", "matlab", "ai", "model-context-protocol", "simulation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27",
]

[project.scripts]
simubridge = "simubridge:main"

[project.urls]
Homepage = "https://github.com/naaomiur/simubridge-skills"
Repository = "https://github.com/naaomiur/simubridge-skills"

[tool.hatch.build.targets.wheel]
packages = ["src/simubridge"]
